// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Build distribution should have a predictable ephemeral navigation based on route configuration: GUI routes expected covered, missing routes 1`] = `
[
  {
    "coverage": "FALSE",
    "path": "/ansible-aap-managed",
    "productGroup": [
      "ansible-aap-managed",
    ],
    "productId": [
      "ansible-aap-managed",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/ansible",
    "productGroup": [
      "ansible-aap-managed",
    ],
    "productId": [
      "ansible-aap-managed",
    ],
    "productVariants": [],
  },
  {
    "coverage": "TRUE",
    "path": "/openshift",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
      "rhacs",
      "rhods",
      "rosa",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/OpenShift Container Platform",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
      "rhacs",
      "rhods",
      "rosa",
    ],
    "productVariants": [],
  },
  {
    "coverage": "TRUE",
    "path": "/openshift-container",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
      "rhacs",
      "rhods",
      "rosa",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/container",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
      "rhacs",
      "rhods",
      "rosa",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/platform",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
      "rhacs",
      "rhods",
      "rosa",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/shift",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
      "rhacs",
      "rhods",
      "rosa",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/openshift-dedicated",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
      "rhacs",
      "rhods",
      "rosa",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/dedicated",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
      "rhacs",
      "rhods",
      "rosa",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/OpenShift-metrics",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
      "rhacs",
      "rhods",
      "rosa",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/metrics",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
      "rhacs",
      "rhods",
      "rosa",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/advanced",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
      "rhacs",
      "rhods",
      "rosa",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/cluster",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
      "rhacs",
      "rhods",
      "rosa",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/security",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
      "rhacs",
      "rhods",
      "rosa",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/kubernetes",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
      "rhacs",
      "rhods",
      "rosa",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/acs",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
      "rhacs",
      "rhods",
      "rosa",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/application-services",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
      "rhacs",
      "rhods",
      "rosa",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/data",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
      "rhacs",
      "rhods",
      "rosa",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/science",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
      "rhacs",
      "rhods",
      "rosa",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/ods",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
      "rhacs",
      "rhods",
      "rosa",
    ],
    "productVariants": [],
  },
  {
    "coverage": "TRUE",
    "path": "/rhel",
    "productGroup": [
      "rhel",
    ],
    "productId": [
      "RHEL for x86",
      "rhel-for-x86-els-payg",
      "Satellite Server",
    ],
    "productVariants": [
      "RHEL for ARM",
      "rhel-aus-addon",
      "RHEL for IBM Power",
      "RHEL for IBM z",
      "RHEL for x86",
      "rhel-for-x86-eus",
      "rhel-for-x86-ha",
      "rhel-for-x86-rs",
      "rhel-for-x86-els-unconverted",
      "rhel-for-sap-x86",
      "rhel-for-x86-els-payg",
      "rhel-for-x86-els-payg-addon",
      "Satellite Capsule",
      "Satellite Server",
    ],
  },
  {
    "coverage": "FALSE",
    "path": "/insights",
    "productGroup": [
      "rhel",
    ],
    "productId": [
      "RHEL for x86",
      "rhel-for-x86-els-payg",
      "Satellite Server",
    ],
    "productVariants": [
      "RHEL for ARM",
      "rhel-aus-addon",
      "RHEL for IBM Power",
      "RHEL for IBM z",
      "RHEL for x86",
      "rhel-for-x86-eus",
      "rhel-for-x86-ha",
      "rhel-for-x86-rs",
      "rhel-for-x86-els-unconverted",
      "rhel-for-sap-x86",
      "rhel-for-x86-els-payg",
      "rhel-for-x86-els-payg-addon",
      "Satellite Capsule",
      "Satellite Server",
    ],
  },
  {
    "coverage": "FALSE",
    "path": "/enterprise",
    "productGroup": [
      "rhel",
    ],
    "productId": [
      "RHEL for x86",
      "rhel-for-x86-els-payg",
      "Satellite Server",
    ],
    "productVariants": [
      "RHEL for ARM",
      "rhel-aus-addon",
      "RHEL for IBM Power",
      "RHEL for IBM z",
      "RHEL for x86",
      "rhel-for-x86-eus",
      "rhel-for-x86-ha",
      "rhel-for-x86-rs",
      "rhel-for-x86-els-unconverted",
      "rhel-for-sap-x86",
      "rhel-for-x86-els-payg",
      "rhel-for-x86-els-payg-addon",
      "Satellite Capsule",
      "Satellite Server",
    ],
  },
  {
    "coverage": "FALSE",
    "path": "/linux",
    "productGroup": [
      "rhel",
    ],
    "productId": [
      "RHEL for x86",
      "rhel-for-x86-els-payg",
      "Satellite Server",
    ],
    "productVariants": [
      "RHEL for ARM",
      "rhel-aus-addon",
      "RHEL for IBM Power",
      "RHEL for IBM z",
      "RHEL for x86",
      "rhel-for-x86-eus",
      "rhel-for-x86-ha",
      "rhel-for-x86-rs",
      "rhel-for-x86-els-unconverted",
      "rhel-for-sap-x86",
      "rhel-for-x86-els-payg",
      "rhel-for-x86-els-payg-addon",
      "Satellite Capsule",
      "Satellite Server",
    ],
  },
  {
    "coverage": "FALSE",
    "path": "/el",
    "productGroup": [
      "rhel",
    ],
    "productId": [
      "RHEL for x86",
      "rhel-for-x86-els-payg",
      "Satellite Server",
    ],
    "productVariants": [
      "RHEL for ARM",
      "rhel-aus-addon",
      "RHEL for IBM Power",
      "RHEL for IBM z",
      "RHEL for x86",
      "rhel-for-x86-eus",
      "rhel-for-x86-ha",
      "rhel-for-x86-rs",
      "rhel-for-x86-els-unconverted",
      "rhel-for-sap-x86",
      "rhel-for-x86-els-payg",
      "rhel-for-x86-els-payg-addon",
      "Satellite Capsule",
      "Satellite Server",
    ],
  },
  {
    "coverage": "FALSE",
    "path": "/x86",
    "productGroup": [
      "rhel",
    ],
    "productId": [
      "RHEL for x86",
      "rhel-for-x86-els-payg",
      "Satellite Server",
    ],
    "productVariants": [
      "RHEL for ARM",
      "rhel-aus-addon",
      "RHEL for IBM Power",
      "RHEL for IBM z",
      "RHEL for x86",
      "rhel-for-x86-eus",
      "rhel-for-x86-ha",
      "rhel-for-x86-rs",
      "rhel-for-x86-els-unconverted",
      "rhel-for-sap-x86",
      "rhel-for-x86-els-payg",
      "rhel-for-x86-els-payg-addon",
      "Satellite Capsule",
      "Satellite Server",
    ],
  },
  {
    "coverage": "FALSE",
    "path": "/ibm",
    "productGroup": [
      "rhel",
    ],
    "productId": [
      "RHEL for x86",
      "rhel-for-x86-els-payg",
      "Satellite Server",
    ],
    "productVariants": [
      "RHEL for ARM",
      "rhel-aus-addon",
      "RHEL for IBM Power",
      "RHEL for IBM z",
      "RHEL for x86",
      "rhel-for-x86-eus",
      "rhel-for-x86-ha",
      "rhel-for-x86-rs",
      "rhel-for-x86-els-unconverted",
      "rhel-for-sap-x86",
      "rhel-for-x86-els-payg",
      "rhel-for-x86-els-payg-addon",
      "Satellite Capsule",
      "Satellite Server",
    ],
  },
  {
    "coverage": "FALSE",
    "path": "/power",
    "productGroup": [
      "rhel",
    ],
    "productId": [
      "RHEL for x86",
      "rhel-for-x86-els-payg",
      "Satellite Server",
    ],
    "productVariants": [
      "RHEL for ARM",
      "rhel-aus-addon",
      "RHEL for IBM Power",
      "RHEL for IBM z",
      "RHEL for x86",
      "rhel-for-x86-eus",
      "rhel-for-x86-ha",
      "rhel-for-x86-rs",
      "rhel-for-x86-els-unconverted",
      "rhel-for-sap-x86",
      "rhel-for-x86-els-payg",
      "rhel-for-x86-els-payg-addon",
      "Satellite Capsule",
      "Satellite Server",
    ],
  },
  {
    "coverage": "FALSE",
    "path": "/els",
    "productGroup": [
      "rhel",
    ],
    "productId": [
      "RHEL for x86",
      "rhel-for-x86-els-payg",
      "Satellite Server",
    ],
    "productVariants": [
      "RHEL for ARM",
      "rhel-aus-addon",
      "RHEL for IBM Power",
      "RHEL for IBM z",
      "RHEL for x86",
      "rhel-for-x86-eus",
      "rhel-for-x86-ha",
      "rhel-for-x86-rs",
      "rhel-for-x86-els-unconverted",
      "rhel-for-sap-x86",
      "rhel-for-x86-els-payg",
      "rhel-for-x86-els-payg-addon",
      "Satellite Capsule",
      "Satellite Server",
    ],
  },
  {
    "coverage": "FALSE",
    "path": "/sat",
    "productGroup": [
      "rhel",
    ],
    "productId": [
      "RHEL for x86",
      "rhel-for-x86-els-payg",
      "Satellite Server",
    ],
    "productVariants": [
      "RHEL for ARM",
      "rhel-aus-addon",
      "RHEL for IBM Power",
      "RHEL for IBM z",
      "RHEL for x86",
      "rhel-for-x86-eus",
      "rhel-for-x86-ha",
      "rhel-for-x86-rs",
      "rhel-for-x86-els-unconverted",
      "rhel-for-sap-x86",
      "rhel-for-x86-els-payg",
      "rhel-for-x86-els-payg-addon",
      "Satellite Capsule",
      "Satellite Server",
    ],
  },
  {
    "coverage": "FALSE",
    "path": "/server",
    "productGroup": [
      "rhel",
    ],
    "productId": [
      "RHEL for x86",
      "rhel-for-x86-els-payg",
      "Satellite Server",
    ],
    "productVariants": [
      "RHEL for ARM",
      "rhel-aus-addon",
      "RHEL for IBM Power",
      "RHEL for IBM z",
      "RHEL for x86",
      "rhel-for-x86-eus",
      "rhel-for-x86-ha",
      "rhel-for-x86-rs",
      "rhel-for-x86-els-unconverted",
      "rhel-for-sap-x86",
      "rhel-for-x86-els-payg",
      "rhel-for-x86-els-payg-addon",
      "Satellite Capsule",
      "Satellite Server",
    ],
  },
  {
    "coverage": "FALSE",
    "path": "/capsule",
    "productGroup": [
      "rhel",
    ],
    "productId": [
      "RHEL for x86",
      "rhel-for-x86-els-payg",
      "Satellite Server",
    ],
    "productVariants": [
      "RHEL for ARM",
      "rhel-aus-addon",
      "RHEL for IBM Power",
      "RHEL for IBM z",
      "RHEL for x86",
      "rhel-for-x86-eus",
      "rhel-for-x86-ha",
      "rhel-for-x86-rs",
      "rhel-for-x86-els-unconverted",
      "rhel-for-sap-x86",
      "rhel-for-x86-els-payg",
      "rhel-for-x86-els-payg-addon",
      "Satellite Capsule",
      "Satellite Server",
    ],
  },
]
`;

exports[`Build distribution should have a predictable ephemeral navigation based on route configuration: YAML routes expected covered, missing routes 1`] = `
[
  {
    "coverage": "TRUE",
    "path": "/rhel",
    "productGroup": [
      "rhel",
    ],
    "productId": [
      "RHEL for x86",
      "rhel-for-x86-els-payg",
      "Satellite Server",
    ],
    "productVariants": [
      "RHEL for ARM",
      "rhel-aus-addon",
      "RHEL for IBM Power",
      "RHEL for IBM z",
      "RHEL for x86",
      "rhel-for-x86-eus",
      "rhel-for-x86-ha",
      "rhel-for-x86-rs",
      "rhel-for-x86-els-unconverted",
      "rhel-for-sap-x86",
      "rhel-for-x86-els-payg",
      "rhel-for-x86-els-payg-addon",
      "Satellite Capsule",
      "Satellite Server",
    ],
  },
  {
    "coverage": "TRUE",
    "path": "/openshift",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
      "rhacs",
      "rhods",
      "rosa",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": undefined,
    "productGroup": undefined,
    "productId": undefined,
    "productVariants": undefined,
  },
  {
    "coverage": "FALSE",
    "path": undefined,
    "productGroup": undefined,
    "productId": undefined,
    "productVariants": undefined,
  },
  {
    "coverage": "TRUE",
    "path": "/rhel",
    "productGroup": [
      "rhel",
    ],
    "productId": [
      "RHEL for x86",
      "rhel-for-x86-els-payg",
      "Satellite Server",
    ],
    "productVariants": [
      "RHEL for ARM",
      "rhel-aus-addon",
      "RHEL for IBM Power",
      "RHEL for IBM z",
      "RHEL for x86",
      "rhel-for-x86-eus",
      "rhel-for-x86-ha",
      "rhel-for-x86-rs",
      "rhel-for-x86-els-unconverted",
      "rhel-for-sap-x86",
      "rhel-for-x86-els-payg",
      "rhel-for-x86-els-payg-addon",
      "Satellite Capsule",
      "Satellite Server",
    ],
  },
  {
    "coverage": "TRUE",
    "path": "/openshift-container",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
      "rhacs",
      "rhods",
      "rosa",
    ],
    "productVariants": [],
  },
]
`;

exports[`Build distribution should match a specific file output 1`] = `
[
  "",
  "./dist/css/4532*css",
  "./dist/css/5204*css",
  "./dist/fed-mods.json",
  "./dist/fonts/graph2x.png",
  "./dist/fonts/graph4x.png",
  "./dist/js/1003*js",
  "./dist/js/1117*js",
  "./dist/js/1132*js",
  "./dist/js/1187*js",
  "./dist/js/122*js",
  "./dist/js/122*txt",
  "./dist/js/1251*js",
  "./dist/js/1251*txt",
  "./dist/js/1276*js",
  "./dist/js/1276*txt",
  "./dist/js/1295*js",
  "./dist/js/1309*js",
  "./dist/js/1398*js",
  "./dist/js/1415*js",
  "./dist/js/1448*js",
  "./dist/js/1507*js",
  "./dist/js/1509*js",
  "./dist/js/1586*js",
  "./dist/js/167*js",
  "./dist/js/1888*js",
  "./dist/js/2007*js",
  "./dist/js/2047*js",
  "./dist/js/2403*js",
  "./dist/js/2471*js",
  "./dist/js/2531*js",
  "./dist/js/2548*js",
  "./dist/js/2871*js",
  "./dist/js/2913*js",
  "./dist/js/3048*js",
  "./dist/js/3055*js",
  "./dist/js/3090*js",
  "./dist/js/3091*js",
  "./dist/js/3114*js",
  "./dist/js/3219*js",
  "./dist/js/3568*js",
  "./dist/js/3676*js",
  "./dist/js/3690*js",
  "./dist/js/3693*js",
  "./dist/js/372*js",
  "./dist/js/3796*js",
  "./dist/js/3888*js",
  "./dist/js/389*js",
  "./dist/js/3941*js",
  "./dist/js/4133*js",
  "./dist/js/4371*js",
  "./dist/js/4388*js",
  "./dist/js/4421*js",
  "./dist/js/4428*js",
  "./dist/js/4434*js",
  "./dist/js/4447*js",
  "./dist/js/4447*txt",
  "./dist/js/4532*js",
  "./dist/js/4869*js",
  "./dist/js/4912*js",
  "./dist/js/4914*js",
  "./dist/js/5093*js",
  "./dist/js/5204*js",
  "./dist/js/5252*js",
  "./dist/js/5294*js",
  "./dist/js/5436*js",
  "./dist/js/5600*js",
  "./dist/js/5606*js",
  "./dist/js/5995*js",
  "./dist/js/6074*js",
  "./dist/js/6137*js",
  "./dist/js/6161*js",
  "./dist/js/6322*js",
  "./dist/js/6335*js",
  "./dist/js/6468*js",
  "./dist/js/6497*js",
  "./dist/js/6514*js",
  "./dist/js/6719*js",
  "./dist/js/6752*js",
  "./dist/js/6755*js",
  "./dist/js/6802*js",
  "./dist/js/7019*js",
  "./dist/js/709*js",
  "./dist/js/7128*js",
  "./dist/js/72*js",
  "./dist/js/7250*js",
  "./dist/js/7454*js",
  "./dist/js/7474*js",
  "./dist/js/7686*js",
  "./dist/js/7691*js",
  "./dist/js/7807*js",
  "./dist/js/7838*js",
  "./dist/js/7964*js",
  "./dist/js/8005*js",
  "./dist/js/8376*js",
  "./dist/js/8518*js",
  "./dist/js/8542*js",
  "./dist/js/8716*js",
  "./dist/js/8775*js",
  "./dist/js/8923*js",
  "./dist/js/9026*js",
  "./dist/js/9067*js",
  "./dist/js/9205*js",
  "./dist/js/924*js",
  "./dist/js/9295*js",
  "./dist/js/9400*js",
  "./dist/js/App*js",
  "./dist/js/exposed-./RootApp*js",
  "./dist/locales/en-US.json",
  "./dist/locales/en.json",
  "./dist/locales/locales.json",
  "./dist/subscriptions*js",
]
`;
